--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'coretto'
+        distribution: 'Amazon Corretto'
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
