ci/cd GitHub Actions version

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,4 +1,5 @@
-chromedriver=lib/chromedriver.exe
+chromedriverWin=lib/chromedriver.exe
+chromedriverUbu=lib/chromedriver
 mainTestPage=https://www.globalsqa.com/angularJs-protractor/BankingProject/#/manager
 addCustomerTestFirstName=test
 addCustomerTestLastName=test
