--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,6 +35,10 @@ jobs:
         java-version: '11'
         distribution: 'corretto'
         cache: maven
+    - name: Install Google Chrome
+      run: |
+        chmod +x ./scripts/InstallChrome.sh
+                    ./scripts/InstallChrome.sh
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: run tests
