--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,8 +37,8 @@ jobs:
         cache: maven
     - name: Install Google Chrome
       run: |
-        chmod +x ./scripts/InstallChrome.sh
-                    ./scripts/InstallChrome.sh
+        chmod +x ./lib/install-chrome.sh
+                    ./scripts/install-chrome.sh
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: run tests
