--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Install Google Chrome
       run: |
         chmod +x ./lib/install-chrome.sh
-                    ./scripts/install-chrome.sh
+                    ./lib/install-chrome.sh
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: run tests
