--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,4 +42,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: run tests
-      run: mvn clean tests
+      run: mvn clean test
