--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,12 +17,6 @@ on:
     paths:
       - '**'
       - '!*.md'
-  pull_request:
-    branches:
-      - '*'
-    paths:
-      - '**'
-      - '!*.md'
 
 jobs:
   build:
@@ -41,5 +35,8 @@ jobs:
                     ./lib/install-chrome.sh
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: run tests
+    - name: Run UI XYZ Bank Tests
       run: mvn clean test
+           mvn allure:serve
+    - name: Compile Reports via allure
+      run:  allure:report
