--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,8 +35,22 @@ jobs:
                     ./lib/install-chrome.sh
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+    - name: Allure set up
+      uses: simple-elf/allure-report-action@master
+      if: always()
+      id: allure-report
+      with:
+        allure_results: allure-results
+        gh_pages: gh-pages
+        allure_report: allure-report
+        allure_history: allure-history
+
     - name: Run UI XYZ Bank Tests
       run: mvn clean test
-           mvn allure:serve
-    - name: Compile Reports via allure
-      run:  allure:report
+
+    - name: Serve allure date
+      run:  allure:serve
+
+    - name: Compile allure Reports
+      run: allure:report
