--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         chmod +x ./lib/install-chrome.sh
                     ./lib/install-chrome.sh
-    - name: Build with Maven
+    - name: Run UI XYZ Bank Tests via Maven
       run: mvn -B package --file pom.xml
 
     - name: Allure set up
@@ -45,12 +45,6 @@ jobs:
         gh_pages: gh-pages
         allure_report: allure-report
         allure_history: allure-history
-
-    - name: Run UI XYZ Bank Tests
-      run: mvn clean test
-
-    - name: Serve allure date
-      run:  allure:serve
 
     - name: Compile allure Reports
       run: allure:report
