--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,15 @@ jobs:
       run: |
         chmod +x ./lib/install-chrome.sh
                     ./lib/install-chrome.sh
+    - name: Install default-jre
+      run: sudo apt-get install default-jre
+
+    - name: wget
+      run: wget https://github.com/allure-framework/allure2/releases/download/2.18.1/allure_2.18.1-1_all.deb
+
+    - name: Install allure
+      run: sudo dpkg -i allure_2.18.1-1_all.deb
+
     - name: Run UI XYZ Bank Tests via Maven
       run: mvn -B package --file pom.xml
 
@@ -45,9 +54,6 @@ jobs:
         gh_pages: gh-pages
         allure_report: allure-report
         allure_history: allure-history
-      run: sudo apt-get install default-jre
-          wget https://github.com/allure-framework/allure2/releases/download/2.18.1/allure_2.18.1-1_all.deb
-          sudo dpkg -i allure_2.18.1-1_all.deb
 
     - name: Compile allure Reports
       run: allure:report
