Added ci/cd GitHub Actions version

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -56,4 +56,4 @@ jobs:
         allure_history: allure-history
 
     - name: Compile allure Reports
-      run: allure:report
+      run: mvn allure:report
