--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,5 +47,8 @@ jobs:
         allure_report: allure-report
         allure_history: allure-history
 
+    - name: Set permissions for Allure
+      run: sudo chmod -R 777 /home/runner/work/SiliciumTestCase/SiliciumTestCase/target/
+
     - name: Compile allure Reports
       run: mvn allure:serve
