Added ci/cd GitHub Actions version

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,6 +37,14 @@ jobs:
     - name: Run UI XYZ Bank Tests via Maven
       run: mvn -B package --file pom.xml
 
+    - name: Get Allure history
+      uses: actions/checkout@v2
+      if: always()
+      continue-on-error: true
+      with:
+        ref: gh-pages
+        path: gh-pages
+
     - name: Allure set up
       uses: simple-elf/allure-report-action@master
       if: always()
@@ -53,12 +61,10 @@ jobs:
     - name: Compile allure Reports
       run: mvn allure:report
 
-    - name: Post the link to the report
+    - name: Deploy report to Github Pages
       if: always()
-      uses: Sibz/github-status-action@v1
-      with:
-        authToken: ${{secrets.GITHUB_TOKEN}}
-        context: 'Test report'
-        state: 'success'
-        sha: ${{ github.event.pull_request.head.sha }}
-        target_url: simple-elf.github.io/github-allure-history/${{ github.run_number }}
+      uses: peaceiris/actions-gh-pages@v2
+      env:
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: allure-history
